- Fixed registration field filtering dropdown display and spacing

--- a/RockWeb/Styles/_forms.less
+++ b/RockWeb/Styles/_forms.less
@@ -85,6 +85,18 @@ a.aspNetDisabled {
   }
 }
 
+.form-inline-all {
+  .form-control {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+
+  .form-control-static {
+    display: inline-block;
+  }
+}
+
 .form-group.captcha {
   iframe {
     border: 0;
